test/fixtures/diagnostics/type-checker/positive/local-assignment-target-analysis/input.tysh
namespace Samples.TypeChecker.LocalAssignmentTargets

enum Permission {
  None,
  Read,
  Write,
  ReadWrite = Read | Write
}

fun updateBits(): int {
  let mut value: int = 1
  value = 2
  value += 3
  value -= 1
  value |= 4
  value &= 7
  value ^= 2
  value
}

fun updateFlags(): Permission {
  let mut permission = Permission.Read
  permission = Permission.Write
  permission |= Permission.Read
  permission &= Permission.ReadWrite
  permission ^= Permission.Write
  permission
}

fun updateBool(): bool {
  let mut flag = true
  flag = false
  flag &= true
  flag |= false
  flag ^= true
  flag
}
