test/fixtures/diagnostics/type-checker/negative/enum-value-bitwise-xor-complement-invalid/input.tysh
namespace Samples.TypeChecker.EnumValueBitwiseXorComplementInvalid

enum Permission {
  Read,
  Write
}

enum Color {
  Red,
  Blue
}

let mixedEnum: Permission = Permission.Read ^ Color.Red

let enumAndNumber: Permission = Permission.Read ^ 1
